--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -219,6 +219,9 @@ header {
 	color: #FDFDFB;
   width:170px;
   float:left;
+  top:0;
+  bottom:0;
+  left:0;
   position:fixed;
 	border: 1px solid #000;
 	-webkit-border-top-right-radius: 4px;
@@ -228,7 +231,6 @@ header {
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
 	padding: 34px 25px 22px 50px;
-	margin: 30px 25px 0 0;
 	-webkit-font-smoothing: antialiased;
 }
 
