--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -208,7 +208,7 @@ td {
 
 /* Wrapper */
 .wrapper {
-  width:960px;
+  width:100%;
 }
 
 
@@ -224,12 +224,6 @@ header {
   left:0;
   position:fixed;
 	border: 1px solid #000;
-	-webkit-border-top-right-radius: 4px;
-	-webkit-border-bottom-right-radius: 4px;
-	-moz-border-radius-topright: 4px;
-	-moz-border-radius-bottomright: 4px;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
 	padding: 34px 25px 22px 50px;
 	-webkit-font-smoothing: antialiased;
 }
@@ -321,7 +315,7 @@ a.buttons:hover {
 /* Section - for main page content */
 
 section {
-  width:650px;
+  margin-left:280px;
   float:right;
   padding-bottom:50px;
 }
